# flynt

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ast_example.py  azure-pipelines.yml  boom.md  config.py  create_fstring.py  decoded.py  launch.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  traverse_ast.py  update_readme.py  upload.sh
.github/workflows/: build.yml  ci.yml  pre-commit.yml  ruff.yml  test.yml
dev/: ast_example.py  create_fstring.py  create_fstring_1.py  decoded.py  in.py  launch.py  traverse_ast.py
examples/: issue106_proof.py
src/: util.py
src/flint/: __init__.py  api.py  crawler.py  launch.py  mutator.py  transform.py
src/flynt/: __init__.py  __main__.py  api.py  ast_chunk.py  cli.py  cli_messages.py  code_editor.py  exceptions.py  file_spy.py  format.py  lexer.py  process.py  pyproject_finder.py  state.py  utils.py
src/flynt/candidates/: PyToken.py  ast_call_candidates.py  ast_chunk.py  ast_percent_candidates.py  chunk.py  split.py
src/flynt/lexer/: Chunk.py  PyToken.py  __init__.py  context.py  py_token.py  split.py
src/flynt/linting/: fstr_lint.py
src/flynt/static_join/: __init__.py  candidates.py  transformer.py  utils.py
src/flynt/string_concat/: __init__.py  candidates.py  string_in_string.py  transformer.py
src/flynt/transform/: FstringifyTransformer.py  __init__.py  format_call_transforms.py  node_transformer.py  percent_transformer.py  transform.py  util.py
src/flynt/utils/: format.py  pyproject_finder.py  utils.py
src/fstringify/: __init__.py  __main__.py  api.py  format.py  lexer.py  node_transformer.py  process.py  transform.py  utils.py
src/fstringify/transform/: __init__.py  format_call_transforms.py  node_transformer.py  transform.py  util.py
test/: conftest.py  test_candidates.py  test_code_editor.py  test_conversion_fields.py  test_edits.py  test_lexer.py  test_process.py  test_pyproject.py  test_styles.py  test_transform.py  test_version_file.py
test/integration/: conftest.py  test_api.py  test_cli.py  test_concat.py  test_files.py  test_files_len_limit.py  test_files_pyup.py  test_files_single_line.py  test_issue83.py  test_notebook_file.py  test_plain.py  test_unicode_degree.py  utils.py
test/integration/expected_out/: CantAffordActiveException.py  class.py  def_empty_line.py  dict_func.py  digit_ordering.py  double_conv.py  escaped_dq.py  escaped_newline.py  escaped_newline_extra.py  first_string.py  hard_percent.py  implicit_concat.py  insert_constant_str.py  long.py  multiline.py  multiline_1.py  multiline_2.py  multiline_dict.py  multiline_issue102.py  multiline_keep.py  multiline_limit.py  no_fstring_2.py  percent_dict.py  percent_numerics.py  percent_strings.py  pyup.py  quotes_issue107.py  raw_string.py  simple.ipynb  simple_comment.py  simple_docstring.py  simple_percent_comment.py  simple_str_newline.py  simple_str_return.py  simple_str_tab.py  slash_quotes.py  some_named.py  static_string_join.py  str_literal.py  string_in_string.py  (+5 more)
test/integration/expected_out_concat/: backslash.py  cr_lf_concat.py  index.py  literals_only.py  longer_line.py  mixed_format.py  multiple.py  newline_char.py  no_parens.py  parens.py  regex_sub.py
test/integration/expected_out_enable_format_only/: sample.py
test/integration/expected_out_enable_percent_only/: sample.py
test/integration/expected_out_single_line/: CantAffordActiveException.py  def_empty_line.py  dict_func.py  digit_ordering.py  double_conv.py  escaped_newline.py  escaped_newline_multiple.py  escaped_newline_single_quotes.py  hard_percent.py  implicit_concat.py  implicit_concat_comment.py  implicit_concat_named1.py  indexed_fmt_name.py  indexed_percent.py  insert_constant_str.py  issue104.py  issue192.py  issue55.py  literal_string.py  long.py  multiline.py  multiline_1.py  multiline_3.py  multiline_dict.py  multiline_issue102.py  multiline_twice.py  multiple.py  named_inverse.py  no_fstring_1.py  no_fstring_2.py  percent_numerics.py  percent_op.py  percent_strings.py  quotes_issue107.py  raw_string.py  regression_flask.py  simple.py  simple_docstring.py  simple_format.py  simple_format_double_brace.py  (+6 more)
test/integration/samples_in/: CantAffordActiveException.py  all_named.py  bom.py  class.py  def_empty_line.py  dict_func.py  digit_ordering.py  double_conv.py  escaped_dq.py  escaped_newline.py  escaped_newline_extra.py  escaped_newline_multiple.py  escaped_newline_single_quotes.py  first_string.py  hard_percent.py  implicit_concat_named2.py  indexed_fmt_name.py  indexed_percent.py  issue104.py  issue192.py  issue55.py  literal_string.py  long.py  multiline.py  multiline_2.py  multiline_dict.py  multiline_keep.py  multiline_twice.py  multiple.py  named_inverse.py  no_fstring_1.py  octal_escape.py  percent_dict.py  percent_numerics.py  percent_op.py  percent_strings.py  py2.py2  pyup.py  regression_flask.py  simple.ipynb  (+22 more)
test/integration/samples_in_concat/: backslash.py  cr_lf_concat.py  index.py  literals_only.py  longer_line.py  mixed_format.py  newline_char.py  no_parens.py  parens.py  parens_multiline.py  regex_sub.py
test/integration/samples_in_enable/: sample.py
test/test_static_join/: test_sj_candidates.py  test_sj_transformer.py  utils.py
test/test_str_concat/: test_candidates.py  test_transformer.py  victim.py
